[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 119.0
margin_top = 156.0
margin_right = 203.0
margin_bottom = 176.0
text = "Atividade 1"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 220.0
margin_top = 138.0
margin_right = 379.0
margin_bottom = 196.0

[node name="Button2" type="Button" parent="."]
margin_left = 117.0
margin_top = 271.0
margin_right = 201.0
margin_bottom = 291.0
text = "Atividade 2"

[node name="Button3" type="Button" parent="."]
margin_left = 114.0
margin_top = 416.0
margin_right = 198.0
margin_bottom = 436.0
text = "Atividade 3"

[node name="Label" type="Label" parent="."]
margin_left = 403.0
margin_top = 143.0
margin_right = 637.0
margin_bottom = 292.0

[node name="Label2" type="Label" parent="."]
margin_left = 243.0
margin_top = 393.0
margin_right = 484.0
margin_bottom = 520.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 730.0
margin_top = 186.0
margin_right = 879.0
margin_bottom = 267.0

[node name="Label3" type="Label" parent="."]
margin_left = 741.0
margin_top = 156.0
margin_right = 877.0
margin_bottom = 170.0
text = "Digite seu nome aqui"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
